--- a/index.html
+++ b/index.html
@@ -1,4 +1,36 @@
 <!DOCTYPE html>
+<style>
+body {
+    background-color: #28282d;
+    color: #a0a0a0;
+}
+h1, h2 {
+    color: #cecece;
+}
+h4 {
+    text-decoration: underline;
+}
+a:link {
+    color: #4182cd;
+    background-color: transparent;
+    text-decoration: none;
+}
+a:visited {
+    color: #c83c64;
+    background-color: transparent;
+    text-decoration: none;
+}
+a:hover {
+    color: #fbf1c7;
+    background-color: transparent;
+    text-decoration: underline;
+}
+a:active {
+    color: #fbf1c7;
+    background-color: transparent;
+    text-decoration: underline;
+}
+</style>
 <html>
     <body>
         <h1>
@@ -136,9 +168,9 @@
             2022.
         </p>
 
-        <h1>
+        <h2>
             Curriculum Vitae
-        </h1>
+        </h2>
         <p>
             2022-2024: Postdoctoral researcher at Meta, supervised by L&#233;on Bottou<br>
             2018-2022: PhD in Machine Learning, supervised by Francis Bach and Alessandro Rudi<br>
