header and footer

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@ a:active {
 }
 </style>
 <html>
+    <header>
+        <title>Vivien Cabannes</title>
+    </header>
     <body>
         <h1>
             Vivien Cabannes
@@ -181,4 +184,9 @@ a:active {
             1994: Birth
         </p>
     </body>
+    <footer>
+        <p>
+            --- Updated on October 14th, 2023 ---
+        </p>
+    </footer>
 </html>
