--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 body {
     background-color: #28282d;
     color: #a0a0a0;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    font-size: 18px;
 }
 h1, h2 {
     color: #cecece;
 }
 h4 {
     text-decoration: underline;
+}
+footer {
+    font-family: monospace;
 }
 a:link {
     color: #4182cd;
@@ -21,12 +26,12 @@ a:visited {
     text-decoration: none;
 }
 a:hover {
-    color: #fbf1c7;
+    color: #cecece;
     background-color: transparent;
     text-decoration: underline;
 }
 a:active {
-    color: #fbf1c7;
+    color: #cecece;
     background-color: transparent;
     text-decoration: underline;
 }
