--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 body {
     background-color: #28282d;
     color: #a0a0a0;
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-    font-size: 18px;
+    font-family: system-ui,sans-serif;
+    font-size: 1em;
 }
 h1, h2 {
     color: #cecece;
