--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@ a:active {
             2017: Master in machine learning (MVA)<br>
             2014: Entrance at the ENS in math<br>
             2012: Baccalaur&#233;at<br>
-            1994: Birth
+            Born in 1994<br><br>
+            <a href="files/resume.pdf">PDF version</a>
         </p>
     </body>
     <footer>
