--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@ a:active {
             Vivien Cabannes
         </h1>
         <p>
-            My current research interest is understanding deep learning, notably through mechanistic interpretability.<br>
-            Other and former interests include representation learning (notably with self-supervised learning), active learning, learning theory, and weakly supervised learning.<br>
-            Hobbies include art with AI, and broader reflections on technology and society.
+            My current research interests revolve around mechanistic interpretability and large-scale experimental design.<br>
+            Other former interests include representation learning (notably with self-supervised learning), active learning, statistical learning theory, and weakly supervised learning.<br>
+            Hobbies include art with AI and broader reflections on technology and society.
         </p>
         <h2>
             Publications
@@ -56,10 +56,15 @@ a:active {
             Deep Learning Understanding
         </h4>
         <p>
+            Vivien Cabannes, Berfin &#350;im&#351;ek, and Alberto Bietti,
+            Learning Associative Memories with Gradient Descent.
+            <em>In Preparation</em>,
+            2024.<br>
+
             Vivien Cabannes, Elvis Dohmatob, and Alberto Bietti,
             <a href="https://arxiv.org/abs/2310.02984">Scaling laws for associative memory.</a>
-            <em>Preprint</em>,
-            2023.<br>
+            In <em>ICLR</em> (Spotlight),
+            2024.<br>
 
             Jenny Bao, Aaron Defazio, Alberto Bietti, and Vivien Cabannes,
             Hessian inertia.
@@ -77,8 +82,8 @@ a:active {
         <p>
             Vivien Cabannes and Francis Bach,
             <a href="https://arxiv.org/abs/2306.00742">Going deeper with spectral decompositions.</a>
-            <em>Preprint</em>,
-            2023.<br>
+            In <em>AISTATS</em>,
+            2024.<br>
 
             Vivien Cabannes, Bobak Kiani, Randall Balestriero, Yann LeCun, and Alberto Bietti,
             <a href="https://arxiv.org/abs/2302.02774">The SSL interplay: augmentations, inductive bias, and generalization.</a>
@@ -94,6 +99,11 @@ a:active {
             Active Learning
         </h4>
         <p>
+            Charles Arnal*, Vivien Cabannes*, and Vianney Perchet,
+            <a href="https://arxiv.org/abs/2402.13079">Mode estimation with partial feedback.</a>
+            <em>Preprint</em>,
+            2024.<br>
+
             Vivien Cabannes, L&#233;on Bottou, Yann LeCun and Randall Balestriero,
             <a href="https://arxiv.org/abs/2303.15256">Active self-supervised Learning: a few low-cost relationships are all you need.</a>
             In <em>ICCV</em>,
@@ -108,9 +118,9 @@ a:active {
             Learning Theory
         </h4>
         <p>
-            Vivien Cabannes and Carles Domingo-Enrich,
+            Vivien Cabannes,
             <a href="https://arxiv.org/abs/2306.11928">Open problem: learning with variational objectives on measures.</a>
-            <em>Preprint</em>,
+            In <em>IEEE Big Data</em>,
             2023.<br>
 
             Vivien Cabannes and Stefano Vigogna,
@@ -153,15 +163,24 @@ a:active {
             2020.
         </p>
         <h4>
+            Sampling
+        </h4>
+        <p>
+            Vivien Cabannes, and Charles Arnal,
+            <a href="https://arxiv.org/abs/2311.13845">Touring sampling with pushforward maps.</a>
+            In <em>ICASSP</em>,
+            2024.<br>
+        </p>
+        <h4>
             Art with AI
         </h4>
         <p>
-            Vivien Cabannes, Thomas Kerdreux, and Louis Thiry,
+            Vivien Cabannes*, Thomas Kerdreux*, and Louis Thiry,
             <a href="https://arxiv.org/abs/2010.13864">Diptychs of human and machine perceptions.</a>
             In <em>NeurIPS Creativity Workshop</em>,
             2020.<br>
 
-            Vivien Cabannes, Thomas Kerdreux, Louis Thiry, and Tina & Charly,
+            Vivien Cabannes*, Thomas Kerdreux*, Louis Thiry*, and Tina & Charly*,
             <a href="https://arxiv.org/abs/1910.04386">Dialog on a canvas with a machine.</a>
             In <em>NeurIPS Creativity Workshop</em>,
             2019.
@@ -176,6 +195,8 @@ a:active {
             2022.
         </p>
 
+        *Equal contributions
+
         <h2>
             Curriculum Vitae
         </h2>
@@ -186,13 +207,12 @@ a:active {
             2017: Master in machine learning (MVA)<br>
             2014: Entrance at the ENS in math<br>
             2012: Baccalaur&#233;at<br>
-            Born in 1994<br><br>
             <a href="files/resume.pdf">PDF version</a>
         </p>
     </body>
     <footer>
         <p>
-            --- Updated on October 14th, 2023 ---
+            --- Updated on February 21st, 2024 ---
         </p>
     </footer>
 </html>
