--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ a:active {
         </h4>
         <p>
             Vivien Cabannes and Francis Bach,
-            <a href="https://arxiv.org/abs/2306.00742">Going deeper with spectral decompositions.</a>
+            <a href="https://arxiv.org/abs/2306.00742">The Galerkin method beats Graph-Based Approaches for Spectral Algorithms.</a>
             In <em>AISTATS</em>,
             2024.<br>
 
