--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ a:active {
         </h4>
         <p>
             Vivien Cabannes, Berfin &#350;im&#351;ek, and Alberto Bietti,
-            Learning Associative Memories with Gradient Descent.
-            <em>In Preparation</em>,
+	    <a href="https://arxiv.org/abs/2402.18724">Learning Associative Memories with Gradient Descent.</a>
+            <em>Preprint</em>,
             2024.<br>
 
             Vivien Cabannes, Elvis Dohmatob, and Alberto Bietti,
@@ -168,7 +168,7 @@ a:active {
         <p>
             Vivien Cabannes, and Charles Arnal,
             <a href="https://arxiv.org/abs/2311.13845">Touring sampling with pushforward maps.</a>
-            In <em>ICASSP</em>,
+            In <em>ICASSP</em> (Oral),
             2024.<br>
         </p>
         <h4>
@@ -212,7 +212,7 @@ a:active {
     </body>
     <footer>
         <p>
-            --- Updated on February 21st, 2024 ---
+            --- Updated on March 26th, 2024 ---
         </p>
     </footer>
 </html>
