--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@ a:active {
         </h2>
         <p>
             2022-2024: Postdoctoral researcher at Meta, supervised by L&#233;on Bottou<br>
-            2018-2022: PhD in Machine Learning, supervised by Francis Bach and Alessandro Rudi<br>
-            2017-2018: Gap year as a quant at Point72, supervised by Cyril Deremble<br>
+            2022: PhD in Machine Learning, supervised by Francis Bach and Alessandro Rudi<br>
+            2018: Year as a quant at Point72, supervised by Cyril Deremble<br>
             2017: Master in machine learning (MVA)<br>
             2014: Entrance at the ENS in math<br>
             2012: Baccalaur&#233;at<br>
