--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ a:active {
         <p>
             Vivien Cabannes, and Charles Arnal,
             <a href="https://arxiv.org/abs/2311.13845">Touring sampling with pushforward maps.</a>
-            In <em>ICASSP</em> (Oral),
+            In <em>ICASSP</em> (Best Paper Award for Industry),
             2024.<br>
         </p>
         <h4>
