--- a/index.html
+++ b/index.html
@@ -56,9 +56,14 @@ a:active {
             Deep Learning Understanding
         </h4>
         <p>
-            Vivien Cabannes, Berfin &#350;im&#351;ek, and Alberto Bietti,
+            Vivien Cabannes, Charles Arnal, Wassim Bouaziz, Alice Yang, Fran&ccedil;ois Charton, and Julia Kempe,
 	    <a href="https://arxiv.org/abs/2402.18724">Learning Associative Memories with Gradient Descent.</a>
-            <em>Preprint</em>,
+            <em>ICML</em>,
+            2024.<br>
+		
+	    Vivien Cabannes, Berfin &#350;im&#351;ek, and Alberto Bietti,
+	    <a href="https://arxiv.org/abs/2402.18724">Learning Associative Memories with Gradient Descent.</a>
+            <em>ICML</em>,
             2024.<br>
 
             Vivien Cabannes, Elvis Dohmatob, and Alberto Bietti,
@@ -101,7 +106,7 @@ a:active {
         <p>
             Charles Arnal*, Vivien Cabannes*, and Vianney Perchet,
             <a href="https://arxiv.org/abs/2402.13079">Mode estimation with partial feedback.</a>
-            <em>Preprint</em>,
+            <em>COLT</em>,
             2024.<br>
 
             Vivien Cabannes, L&#233;on Bottou, Yann LeCun and Randall Balestriero,
@@ -212,7 +217,7 @@ a:active {
     </body>
     <footer>
         <p>
-            --- Updated on March 26th, 2024 ---
+            --- Updated on June 27th, 2024 ---
         </p>
     </footer>
 </html>
