--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ a:active {
         </h4>
         <p>
             Vivien Cabannes, Charles Arnal, Wassim Bouaziz, Alice Yang, Fran&ccedil;ois Charton, and Julia Kempe,
-	    <a href="https://arxiv.org/abs/2402.18724">Learning Associative Memories with Gradient Descent.</a>
-            <em>ICML</em>,
+	    <a href="https://arxiv.org/abs/2406.02128">Iteration Head: A Mechanistic Study of Chain-of-Thought.</a>
+            <em>Preprint</em>,
             2024.<br>
 		
 	    Vivien Cabannes, Berfin &#350;im&#351;ek, and Alberto Bietti,
