--- a/index.html
+++ b/index.html
@@ -59,27 +59,35 @@ a:active {
             Vivien Cabannes, Charles Arnal, Wassim Bouaziz, Alice Yang, Fran&ccedil;ois Charton, and Julia Kempe,
 	    <a href="https://arxiv.org/abs/2406.02128">Iteration Head: A Mechanistic Study of Chain-of-Thought.</a>
             <em>Preprint</em>,
-            2024.<br>
+            2024.
+	    <a href="https://github.com/fairinternal/composable-llm">[Codebase]</a>
+	    <br>
 		
 	    Vivien Cabannes, Berfin &#350;im&#351;ek, and Alberto Bietti,
 	    <a href="https://arxiv.org/abs/2402.18724">Learning Associative Memories with Gradient Descent.</a>
             <em>ICML</em>,
-            2024.<br>
+            2024.
+	    <a href="https://github.com/facebookresearch/pal/tree/dev/optimization">[Codebase]</a>
+	    <br>
 
             Vivien Cabannes, Elvis Dohmatob, and Alberto Bietti,
             <a href="https://arxiv.org/abs/2310.02984">Scaling laws for associative memory.</a>
             In <em>ICLR</em> (Spotlight),
-            2024.<br>
+            2024.
+	    <a href="https://github.com/facebookresearch/pal/tree/dev/scaling_law">[Codebase]</a>
+	    <br>
 
             Jenny Bao, Aaron Defazio, Alberto Bietti, and Vivien Cabannes,
             Hessian inertia.
             In <em>ICML Learning Dynamics Workshop</em>,
-            2023.<br>
+            2023.
+	    <br>
 
             Alberto Bietti, Vivien Cabannes, Diane Bouchacourt, Herv&#233; Jegou, and L&#233;on Bottou,
             <a href="https://arxiv.org/abs/2306.00802">Birth of a transformer: a memory viewpoint.</a>
             In <em>NeurIPS</em> (Spotlight),
             2023.
+	    <a href="https://github.com/albietz/transformer-birth">[Codebase]</a>
         </p>
         <h4>
             Representation Learning & Self-Supervised Learning
@@ -88,17 +96,22 @@ a:active {
             Vivien Cabannes and Francis Bach,
             <a href="https://arxiv.org/abs/2306.00742">The Galerkin method beats Graph-Based Approaches for Spectral Algorithms.</a>
             In <em>AISTATS</em>,
-            2024.<br>
+            2024.
+	    <a href="https://github.com/VivienCabannes/laplacian">[Codebase]</a>
+	    <br>
 
             Vivien Cabannes, Bobak Kiani, Randall Balestriero, Yann LeCun, and Alberto Bietti,
             <a href="https://arxiv.org/abs/2302.02774">The SSL interplay: augmentations, inductive bias, and generalization.</a>
             In <em>ICML</em>,
-            2023.<br>
+            2023.
+	    <a href="https://github.com/facebookresearch/rates/tree/main/scripts/ssl_interplay">[Codebase]</a>
+	    <br>
 
             Vivien Cabannes, Alberto Bietti, and Randall Balestriero,
             <a href="https://arxiv.org/abs/2211.03782">On minimal variations for unsupervised representation learning.</a>
             In <em>ICASSP</em> (Oral),
             2023.
+	    <a href="https://github.com/facebookresearch/PSSL">[Codebase]</a>
         </p>
         <h4>
             Active Learning
@@ -107,17 +120,22 @@ a:active {
             Charles Arnal*, Vivien Cabannes*, and Vianney Perchet,
             <a href="https://arxiv.org/abs/2402.13079">Mode estimation with partial feedback.</a>
             <em>COLT</em>,
-            2024.<br>
+            2024.
+	    <a href="https://github.com/VivienCabannes/mepf">[Codebase]</a>
+	    <br>
 
             Vivien Cabannes, L&#233;on Bottou, Yann LeCun and Randall Balestriero,
             <a href="https://arxiv.org/abs/2303.15256">Active self-supervised Learning: a few low-cost relationships are all you need.</a>
             In <em>ICCV</em>,
-            2023.<br>
+            2023.
+	    <a href="https://github.com/facebookresearch/rates/tree/main/scripts/active_ssl">[Codebase]</a>
+	    <br>
 
             Vivien Cabannes, Vianney Perchet, Francis Bach, and Alessandro Rudi,
             <a href="https://arxiv.org/abs/2205.13255">Active labeling: streaming stochastic gradients.</a>
             In <em>NeurIPS</em>,
             2022.
+	    <a href="https://github.com/VivienCabannes/active-labeling">[Codebase]</a>
         </p>
         <h4>
             Learning Theory
@@ -126,17 +144,21 @@ a:active {
             Vivien Cabannes,
             <a href="https://arxiv.org/abs/2306.11928">Open problem: learning with variational objectives on measures.</a>
             In <em>IEEE Big Data</em>,
-            2023.<br>
+            2023.
+	    <br>
 
             Vivien Cabannes and Stefano Vigogna,
             <a href="https://arxiv.org/abs/2305.16014">How many samples are needed to leverage smoothness?</a>
             In <em>NeurIPS</em>,
-            2023.<br>
+            2023.
+	    <a href="https://github.com/facebookresearch/rates/tree/main/scripts/samples_for_smoothness">[Codebase]</a>
+	    <br>
 
             Vivien Cabannes and Stefano Vigogna,
             <a href="https://arxiv.org/abs/2205.10055">A case of exponential convergence rates for SVM.</a>
             In <em>AISTATS</em>,
-            2023.<br>
+            2023.
+	    <br>
 
             Vivien Cabannes, Alessandro Rudi, and Francis Bach,
             <a href="https://arxiv.org/abs/2102.00760">Fast rates in structured prediction.</a>
@@ -150,22 +172,28 @@ a:active {
             Vivien Cabannes,
             <a href="https://arxiv.org/abs/2209.11629">From weakly supervised learning to active labeling.</a>
             <em>PhD thesis at Ecole Normale Sup&#233;rieure</em>,
-            2022.<br>
+            2022.
+	    <br>
 
             Vivien Cabannes, Loucas Pillaud-Vivien, Francis Bach, and Alessandro Rudi,
             <a href="https://arxiv.org/abs/2009.04324">Overcoming the curse of dimensionnality with Laplacian regularization in semi-supervised learning.</a>
             In <em>NeurIPS</em>,
-            2021.<br>
+            2021.
+	    <a href="https://github.com/VivienCabannes/partial_labelling">[Codebase]</a>
+	    <br>
 
             Vivien Cabannes, Francis Bach, and Alessandro Rudi,
             <a href="https://arxiv.org/abs/2102.02789">Disambiguation of weak supervision with exponential convergence rates.</a>
             In <em>ICML</em>,
-            2021.<br>
+            2021.
+	    <a href="https://github.com/VivienCabannes/partial_labelling">[Codebase]</a>
+	    <br>
 
             Vivien Cabannes, Alessandro Rudi, and Francis Bach,
             <a href="https://arxiv.org/abs/2003.00920">Structured prediction with partial labelling through the infimum loss.</a>
             In <em>ICML</em>,
             2020.
+	    <a href="https://github.com/VivienCabannes/partial_labelling">[Codebase]</a>
         </p>
         <h4>
             Sampling
@@ -174,7 +202,7 @@ a:active {
             Vivien Cabannes, and Charles Arnal,
             <a href="https://arxiv.org/abs/2311.13845">Touring sampling with pushforward maps.</a>
             In <em>ICASSP</em> (Best Paper Award for Industry),
-            2024.<br>
+            2024.
         </p>
         <h4>
             Art with AI
@@ -183,7 +211,8 @@ a:active {
             Vivien Cabannes*, Thomas Kerdreux*, and Louis Thiry,
             <a href="https://arxiv.org/abs/2010.13864">Diptychs of human and machine perceptions.</a>
             In <em>NeurIPS Creativity Workshop</em>,
-            2020.<br>
+            2020.
+	    <br>
 
             Vivien Cabannes*, Thomas Kerdreux*, Louis Thiry*, and Tina & Charly*,
             <a href="https://arxiv.org/abs/1910.04386">Dialog on a canvas with a machine.</a>
