--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@ a:active {
             Vivien Cabannes
         </h1>
         <p>
-            My current research interests revolve around mechanistic interpretability and large-scale experimental design.<br>
-            Other former interests include representation learning (notably with self-supervised learning), active learning, statistical learning theory, and weakly supervised learning.<br>
-            Hobbies include art with AI and broader reflections on technology and society.
-        </p>
+	My current research interests revolve around large-scale experimental design and understanding the core principles behind artificial intelligence.<br>
+	Hobbies include creating art with AI and reflecting on the broader implications of technology on society.
+	</p>
         <h2>
             Publications
         </h2>
@@ -58,7 +57,7 @@ a:active {
         <p>
             Vivien Cabannes, Charles Arnal, Wassim Bouaziz, Alice Yang, Fran&ccedil;ois Charton, and Julia Kempe,
 	    <a href="https://arxiv.org/abs/2406.02128">Iteration Head: A Mechanistic Study of Chain-of-Thought.</a>
-            <em>Preprint</em>,
+            <em>NeurIPS</em>,
             2024.
 	    <a href="https://github.com/fairinternal/composable-llm">[Codebase]</a>
 	    <br>
@@ -117,7 +116,7 @@ a:active {
             Active Learning
         </h4>
         <p>
-            Charles Arnal*, Vivien Cabannes*, and Vianney Perchet,
+            Charles Arnal, Vivien Cabannes, and Vianney Perchet,
             <a href="https://arxiv.org/abs/2402.13079">Mode estimation with partial feedback.</a>
             <em>COLT</em>,
             2024.
@@ -208,13 +207,13 @@ a:active {
             Art with AI
         </h4>
         <p>
-            Vivien Cabannes*, Thomas Kerdreux*, and Louis Thiry,
+            Vivien Cabannes, Thomas Kerdreux, and Louis Thiry,
             <a href="https://arxiv.org/abs/2010.13864">Diptychs of human and machine perceptions.</a>
             In <em>NeurIPS Creativity Workshop</em>,
             2020.
 	    <br>
 
-            Vivien Cabannes*, Thomas Kerdreux*, Louis Thiry*, and Tina & Charly*,
+            Vivien Cabannes, Thomas Kerdreux, Louis Thiry, and Tina & Charly,
             <a href="https://arxiv.org/abs/1910.04386">Dialog on a canvas with a machine.</a>
             In <em>NeurIPS Creativity Workshop</em>,
             2019.
@@ -229,12 +228,11 @@ a:active {
             2022.
         </p>
 
-        *Equal contributions
-
         <h2>
             Curriculum Vitae
         </h2>
         <p>
+            2024-: Researcher at Meta AI (FAIR)<br>
             2022-2024: Postdoctoral researcher at Meta, supervised by L&#233;on Bottou<br>
             2019-2022: PhD in Machine Learning, supervised by Francis Bach and Alessandro Rudi<br>
             2018: Year as a quant at Point72, supervised by Cyril Deremble<br>
